incorporando el boton añadir lista

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
       </div>
     </header>
     <main>
+      <div class="title">
+        <h1>Tablero - Reto de código</h1>
+      </div>
+      <div class="container">
+        <input id="entrada" type="submit" name="" value="Añadir una lista ...">
+      </div>
       
+
     </main>
 
     <script type="text/javascript"src="js/app.js">
