incorporando el formulario

--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
         <h1>Tablero - Reto de código</h1>
       </div>
       <div class="container">
-        <input id="entrada" type="submit" name="" value="Añadir una lista ...">
+        <input class"enter" id="entrada" type="submit" name="" value="Añadir una lista ...">
       </div>
-      
+
+      <form id="formul"class="formul" action="index.html" method="post">
+        <div class="">
+          <input type="text" name="" value="">
+        </div>
+
+        <button type="button" name="button">Guardar</button>
+      </form>
 
     </main>
 
