incorporando funcionalidad del boton guardar

--- a/index.html
+++ b/index.html
@@ -27,18 +27,24 @@
       <div class="title">
         <h1>Tablero - Reto de código</h1>
       </div>
-      <div class="container">
+      <div id="container-grande">
+
+
+  <div class="container">
         <input class"enter" id="entrada" type="submit" name="" value="Añadir una lista ...">
       </div>
 
-      <form id="formul"class="formul" action="index.html" method="post">
-        <div class="">
-          <input type="text" name="" value="">
+      <form id="formul"class="formul formul1" action="index.html" method="post">
+        <div>
+          <input id="title-box" type="text" name="" value="">
         </div>
 
-        <button type="button" name="button">Guardar</button>
+        <button id="save-button" type="button" name="button">Guardar</button>
       </form>
+      <div id="second" class="second">
 
+      </div>
+  </div>
     </main>
 
     <script type="text/javascript"src="js/app.js">
