añadiendo el boton añadir una lista

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <input class"enter" id="entrada" type="submit" name="" value="Añadir una lista ...">
       </div>
 
-      <form id="formul"class="formul formul1" action="index.html" method="post">
+      <form id="formul"class="formul " action="index.html" method="post">
         <div>
-          <input id="title-box" type="text" name="" value="">
+          <input id="title-box" type="text" name="" value="" placeholder="Añadir una lista">
         </div>
 
         <button id="save-button" type="button" name="button">Guardar</button>
       </form>
-      <div id="second" class="second">
+      <div id="second" >
 
       </div>
   </div>
