añadiendo formulario y boton añadir

--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
         <button id="save-button" type="button" name="button">Guardar</button>
       </form>
       <div id="second" >
+        <div class="cont">
+
+        </div>
+        <div class="boxnew">
+
+        </div>
+        <div class="newtext">
+          <input id= "btn-list" type="submit" name="" value="Añadir una tarea">
+          <form id="formulario" action="index.html" method="post">
+            <textarea name="name" ></textarea>
+            <div class="">
+              <button type="button" name="button">Añadir</button>
+            </div>
+          </form>
+        </div>
+
+
 
       </div>
   </div>
