Incorporando tareas debajo del titulo

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="newtext">
           <input id= "btn-list" type="submit" name="" value="Añadir una tarea">
           <form id="formulario" action="index.html" method="post">
-            <textarea name="name" ></textarea>
+            <textarea id="entrada1" name="name" ></textarea>
             <div class="">
-              <button type="button" name="button">Añadir</button>
+              <button id="añadir"type="button" name="button">Añadir</button>
             </div>
           </form>
         </div>
