mejorando estilos al encabezado y cuerpo

--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="utf-8">
     <title>Trello</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
+      <!--Encabezado-->
+      <!--ícono tablero-->
       <div class="box">
-        <h1><i class="fa fa-trello" aria-hidden="true"></i>Tablero</h1>
+        <a href="https://www.youtube.com/"><i class="fa fa-trello" aria-hidden="true"></i>Tablero</a>
       </div>
+      <!--ícono buscar-->
       <div class="box">
         <i id="search"class="fa fa-search" aria-hidden="true"></i>
       </div>
+      <!--ícono trello-->
       <div class="trello">
-        <h1><i class="fa fa-trello" aria-hidden="true"></i>Trello </h1>
+        <a href="#"><i class="fa fa-trello" aria-hidden="true"></i>Trello </a>
       </div>
+      <!--bloque de tres íconos-->
       <div class="box-icons">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-        <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-        <i class="fa fa-bell" aria-hidden="true"></i>
+        <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
+        <a href="#"><i>  <img src="assets/images/meli.jpg" alt=""></i></a>
+        <a href="#"><i>Melissa Yauri</i></a>
+        <a href="#"><i class="fa fa-exclamation-circle" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
       </div>
     </header>
     <main>
