mejorando estilos al encabezado y cuerpo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <!--ícono buscar-->
       <div class="box">
-        <i id="search"class="fa fa-search" aria-hidden="true"></i>
+        <i class="search"class="fa fa-search" aria-hidden="true"></i>
       </div>
       <!--ícono trello-->
       <div class="trello">
@@ -31,8 +31,11 @@
         <a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
       </div>
     </header>
+
+    <!--cuerpo-->
     <main>
-      <div class="title">
+      <!--subtitulo-->
+      <div class="subtitle">
         <h1>Tablero - Reto de código</h1>
       </div>
       <div id="container-grande">
