--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <!--ícono buscar-->
       <div class="box">
-        <i class="search"class="fa fa-search" aria-hidden="true"></i>
+        <i id="search"class="fa fa-search" aria-hidden="true"></i>
       </div>
       <!--ícono trello-->
       <div class="trello">
@@ -35,38 +35,43 @@
     <!--cuerpo-->
     <main>
       <!--subtitulo-->
-      <div class="subtitle">
+      <section class="subtitle">
         <h1>Tablero - Reto de código</h1>
-      </div>
-      <div id="container-grande">
-
-
-  <div class="container">
-        <input class"enter" id="entrada" type="submit" name="" value="Añadir una lista ...">
-      </div>
-
-      <form id="formul"class="formul " action="index.html" method="post">
+      </section>
+      <!--contendedor-->
+      <div class="container">
+        <!--Ingreso del texto-->
         <div>
-          <input id="title-box" type="text" name="" value="" placeholder="Añadir una lista">
+          <input class"input-list" id="input-list" type="submit" name="" value="Añadir una lista ...">
         </div>
+        <!--primer formulario-->
+        <form id="formul" class="formul " action="index.html" method="post">
+          <div>
+            <!--titulo de la lista-->
+            <input id="title-list" type="text" name="" value="" placeholder="Añadir una lista">
+          </div>
+          <!--botón guardar-->
+          <button id="save-button" type="button" name="button">Guardar</button>
+        </form>
+        <!--segundo contenedor-->
+        <div id="second-container" >
+          <!--tercer contendeor del titulo y las tareas -->
+          <div class="thrid-container">
 
-        <button id="save-button" type="button" name="button">Guardar</button>
-      </form>
-      <div id="second" >
-        <div class="cont">
-
-        </div>
-        <div class="boxnew">
-
-        </div>
-        <div class="newtext">
-          <input id= "btn-list" type="submit" name="" value="Añadir una tarea">
           <form id="formulario" action="index.html" method="post">
             <textarea id="entrada1" name="name" ></textarea>
             <div class="">
               <button id="añadir"type="button" name="button">Añadir</button>
             </div>
           </form>
+          </div>
+          <!--
+        <div class="box-works">
+
+        </div>-->
+        <div id="newtext">
+          <input id= "btn-works" type="submit" name="" value="Añadir una tarea">
+
         </div>
 
 
