mejorando los estilos de los formularios

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="second-container" >
           <!--tercer contendeor del titulo y las tareas -->
           <div class="thrid-container">
-
+              <!--tercer contendeor del titulo y las tareas -->
           <form id="formulario" action="index.html" method="post">
             <textarea id="entrada1" name="name" ></textarea>
             <div class="">
