incorporando archivo readme

--- a/index.html
+++ b/index.html
@@ -57,31 +57,25 @@
         <div id="second-container" >
           <!--tercer contendeor del titulo y las tareas -->
           <div class="thrid-container">
-              <!--tercer contendeor del titulo y las tareas -->
-          <form id="formulario" action="index.html" method="post">
-            <textarea id="entrada1" name="name" ></textarea>
-            <div class="">
-              <button id="añadir"type="button" name="button">Añadir</button>
-            </div>
-          </form>
+            <!--segundo formulario -->
+            <form id="formulario" action="index.html" method="post">
+              <!--entrada de las tareas -->
+              <textarea id="entrada1" name="name" ></textarea>
+              <!--botón añadir-->
+              <div>
+                <button id="add"type="button" name="button">Añadir</button>
+              </div>
+            </form>
           </div>
-          <!--
-        <div class="box-works">
-
-        </div>-->
-        <div id="newtext">
-          <input id= "btn-works" type="submit" name="" value="Añadir una tarea">
-
+          <!--botón añadir una tarea-->
+          <div>
+            <input id= "btn-works" type="submit" name="" value="Añadir una tarea">
+          </div>
         </div>
-
-
-
       </div>
-  </div>
     </main>
 
     <script type="text/javascript"src="js/app.js">
-
 </script>
   </body>
 </html>
